fix spinner alignment and carousel arrows
Former-commit-id: b6b8e2a6ddada96f9fb2be7ee0a083df9e17c164

--- a/app/static/css/edit.css
+++ b/app/static/css/edit.css
@@ -130,6 +130,7 @@ input[type=range]:focus::-ms-fill-upper {
 .not-logged-in {
     max-height: calc(100vh - 175px);
     overflow-y: auto;
+    text-align: center;
 }
 
 .image-modal-header {
